--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "GNU",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
+    "start": "nodemon src/server.js",
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
