deploy yarn build & start heroku

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "GNU",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "nodemon src/server.js",
+    "build" : "yarn sucrase ./src -d ./dist --transforms imports",
+    "start": "node dist/server.js",
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
